--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Black Pride MLM App Backend</title>
+  <title>Black Pride Beuty App Backend</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -25,7 +25,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <%= link_to "Black Pride", "#", :class => "brand" %>
+        <%= link_to "Black Pride Beauty", "#", :class => "brand" %>
 				<%= yield :nav_links %>
       </div>
     </div>
@@ -40,7 +40,7 @@
     <%= yield %>
     <hr>
     <footer>
-      <p>&copy; Black Pride 2012</p>
+      <p>&copy; Black Pride Beauty 2012</p>
     </footer>
   </div>
 </body>
