--- a/app/views/accounts/_user_modal.erb
+++ b/app/views/accounts/_user_modal.erb
@@ -1,13 +1,14 @@
-<div class="modal-header">
-	<button class="close" data-dismiss="modal">×</button>
-	<h3><%= @user.name %></h3>
+<div class="modal fade" id="network-modal">
+	<div class="modal-header">
+		<button class="close" data-dismiss="modal">×</button>
+		<h3><%= @user.name %></h3>
+	</div>
+	<div class="modal-body">
+		<dl class="dl-horizontal">
+			<dt>ID:</dt>
+			<dd><%= @user.id %>  </dd>
+			<dt>Referred by: </dt>
+			<dd><%= @user.parent.name %>	(ID: <%= @user.parent.id %>) </dd>
+		</dl>
+	</div>
 </div>
-<div class="modal-body">
-	<dl class="dl-horizontal">
-		<dt>ID:</dt>
-		<dd><%= @user.id %>  </dd>
-		<dt>Referred by: </dt>
-		<dd><%= @user.parent.name %>	(ID: <%= @user.parent.id %>) </dd>
-	</dl>
-</div>
-
