--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,12 +1,4 @@
-<script>
-    $(document).ready(function() {
-          $(".network-modal-link").bind("ajax:success",
-                   function(evt, data, status, xhr){
-                        //this assumes the action returns an HTML snippet
-                        $("#network-modal").html(data);
-           }
-    });
-</script>
+
 
 <p id="notice"><%= notice %></p>
 
@@ -59,7 +51,7 @@
 							<% @account.first_generation.each do |item| -%>
 								<tr>
 									<td>
-<%= link_to item.id, user_modal_path(:user_id => item.id), {:remote => true, 'data-toggle' => 'modal', 'data-target' => "#network-modal", :class => 'network-modal-link'} %>
+<%= link_to item.id, user_modal_path(:user_id => item.id), {:remote => true, :class => 'network-modal-link'} %>
 									</td>
 									<td>$<%= @account.earnings_from_user item%>.00</td>
 								</tr>	
