fixed redirection after login/signup

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -11,7 +11,7 @@
 	</a>
 	<ul class="dropdown-menu">
 		<li>
-			<a href="#">Sign Out</a>
+			<%= link_to "Sign Out", logout_path %>
 		</li>
 	</ul>
 </div>
