--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -31,6 +31,9 @@
 			<h4><a data-toggle="modal" href="#myModal" ><%= @account.referer_id %></a></h4>
 			<h3>Membership type</h3>
 			<h4><%= package_badge_helper %></h4>
+			<h3>Current earnings</h3>
+			<h4>$<%= @account.current_earnings %>.00</h4>
+
 		</div>
 	</div>
 	<div class="span9">
