--- a/app/views/accounts/_pricing.html.erb
+++ b/app/views/accounts/_pricing.html.erb
@@ -1,6 +1,6 @@
 <div class="hero-unit">
-	<h1>Upgrade your account and win!</h1>
-	<p>With the platinum package you can invite other people to join Black Pride Beauty and get a percentage of their earnings </p>
+	<h1>To be Completed!</h1>
+	<p>With the platinum package you can invite other people to join Black Pride Beauty and get a percentage of their earnings... </p>
 	<p>
 </div>
 	<div class="row-fluid">
