fixed issue with flash message

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,26 @@
  *= require_self
  *= require_tree .
 */
+*************** NOTIFICATION MESSAGE STYLES ******************/
+/*************** media.html ***********************************/
+
+.notifyMessage { padding: 7px 10px; font-weight: bold; margin: 10px 0; display: none; }
+.notifySuccess { border: 1px solid #C1D779; background: #EFFEB9; display: block; }
+.notifyError { border: 1px solid #E18B7C; background: #FAD5CF; display: block; }
+
+
+.notification {
+	height: 51px; overflow: hidden; position: relative; margin-bottom: 20px; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px;
+	-moz-box-shadow: 1px 1px 2px #ddd;
+}
+.notification p { margin: 14px 10px 0 75px; font-size: 13px; color: #333; }
+.notification a.close {
+	position: absolute; width: 14px; height: 14px; top: 5px; right: 5px; background-image: url(close.png); background-repeat: no-repeat; border:1px solid; }
+.notification a.close:hover { cursor: pointer; }
+.msginfo a.close { background-position: -42px 0; }
+.msginfo a.close:hover { background-position: -42px -14px; }
+.msgerror a.close { background-position: 0 0; }
+.msgerror a.close:hover { background-position: 0 -14px; }
+
+.msginfo { border: 1px solid #99c4ea; background: #d1e4f3 url(notifications.png) no-repeat 0 -156px; }
+.msgerror { border: 1px solid #e18b7c; background: #fad5cf url(notifications.png) no-repeat 0 0; }
