--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,13 +31,14 @@
     </div>
   </div>
   <div class="container-fluid">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, :class => "alert #{name == :error ? "alert-error" : "alert-success" }" do %>
-        <a class="close" data-dismiss="alert" href="#">×</a>
-        <%= msg %>
-      <% end %>
-    <% end %>
+		<%- flash.each do |name, msg| -%>
+			<% content = content_tag(:a, '', :class => "close") + content_tag(:p, msg) %>
+			<%= content_tag :div, content, :class => "notification msgerror" if (msg.is_a?(String) && flash[:alert].present? ) %>
+			<%= content_tag :div, content, :class => "notification msginfo" if (msg.is_a?(String) && flash[:notice].present? ) %>
+		<% end %>
+
     <%= yield %>
+
     <hr>
     <footer>
       <p>&copy; Black Pride Beauty 2012</p>
