--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,3 +34,8 @@
 
 .msginfo { border: 1px solid #99c4ea; background: #d1e4f3 url(notifications.png) no-repeat 0 -156px; }
 .msgerror { border: 1px solid #e18b7c; background: #fad5cf url(notifications.png) no-repeat 0 0; }
+
+.label_package_1{}
+.label_package_2{background-color: #F89406 !important;}
+.label_package_3{background-color: #3A87AD !important;}
+.label_package_1 a, .label_package_2 a, .label_package_3 a{color:#ffffdd !important;}
