--- a/app/views/accounts/_network.html.erb
+++ b/app/views/accounts/_network.html.erb
@@ -10,7 +10,9 @@
 								<% @account.first_generation.each do |item| -%>
 									<tr>
 										<td>
-											<%= link_to item.referer_id, user_modal_path(:user_id => item.referer_id), {:remote => true, :class => 'network-modal-link'} %>
+										  <span class="label label_package_<%= item.package %>">
+												<%= link_to item.referer_id, user_modal_path(:user_id => item.referer_id), {:remote => true, :class => 'network-modal-link'} %>
+										  </span>
 										</td>
 										<td>$<%= @account.earnings_from_user item%>.00</td>
 									</tr>	
@@ -28,7 +30,9 @@
 								<% @account.second_generation.each do |item| -%>
 									<tr>
 										<td>
-											<%= link_to item.referer_id, user_modal_path(:user_id => item.referer_id), {:remote => true, :class => 'network-modal-link'} %>
+											<span class="label label_package_<%= item.package %>">
+												<%= link_to item.referer_id, user_modal_path(:user_id => item.referer_id), {:remote => true, :class => 'network-modal-link'} %>
+											</span>
 										</td>
 										<td>$<%= @account.earnings_from_user item%>.00</td>
 									</tr>	
