--- a/app/views/accounts/_pricing.html.erb
+++ b/app/views/accounts/_pricing.html.erb
@@ -1,7 +1,9 @@
 <div class="hero-unit">
 	<h1>To be Completed!</h1>
 	<p>With the platinum package you can invite other people to join Black Pride Beauty and get a percentage of their earnings... </p>
-	<p>
+	<p>Please click the following button to upgrade to Platinum Account</p>
+	<br />
+	<p><%= link_to 'Upgrade to Platinum', upgrade_to_premium_users_path, {:class => "center green_button"} %></p>
 </div>
 	<div class="row-fluid">
 		<div class="span4">
