--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -14,6 +14,7 @@
 <div class="nav-collapse">
   <ul class="nav pull-right">
 		<li><%= link_to 'My Account', my_account_path %></li>
+		<li><%= link_to 'My Payments', payment_notifications_path %></li>
     <li><a href="#about">About</a></li>
     <li><a href="#help">Help</a></li>
   </ul>
