--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <%= link_to "Black Pride Beauty", "#", :class => "brand" %>
+        <%= link_to "Black Pride Beauty", "/", :class => "brand" %>
 				<%= yield :nav_links %>
       </div>
     </div>
