--- a/app/views/payment_notifications/index.html.erb
+++ b/app/views/payment_notifications/index.html.erb
@@ -1,3 +1,27 @@
+<% content_for :nav_links do %>
+<div class="btn-group pull-right">
+	<a class="btn dropdown-toggle" href="#" data-toggle="dropdown">
+		<i class="icon-user"></i>
+		<%= current_user.name %>
+		<span class="caret"></span>
+	</a>
+	<ul class="dropdown-menu">
+		<li>
+			<%= link_to "Sign Out", logout_path %>
+		</li>
+	</ul>
+</div>
+<div class="nav-collapse">
+  <ul class="nav pull-right">
+		<li><%= link_to 'My Account', my_account_path %></li>
+		<li><%= link_to 'My Payments', payment_notifications_path %></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#help">Help</a></li>
+  </ul>
+</div>
+<% end %>
+
+
 <% if Rails.env=="development" %>
 <p>Sorry, paypal does not send any notification to you local machine.....</p>
 <% end %>
