--- a/app/views/payment_notifications/index.html.erb
+++ b/app/views/payment_notifications/index.html.erb
@@ -23,7 +23,7 @@
 
 
 <% if Rails.env=="development" %>
-<p>Sorry, paypal does not send any notification to you local machine.....</p>
+<p>Sorry, paypal does not send any notification to your local machine.....</p>
 <% end %>
 
 <% if Rails.env=="production" %>
