--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Black Pride Beuty App Backend</title>
+  <title>Black Pride Beauty App Backend</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -41,7 +41,7 @@
 
     <hr>
     <footer>
-      <p>&copy; Black Pride Beauty 2012</p>
+      <center><p>&copy; Black Pride Beauty 2012</p></center>
     </footer>
   </div>
 </body>
