--- a/app/views/identities/new.html.erb
+++ b/app/views/identities/new.html.erb
@@ -11,7 +11,7 @@
       </ul>
     </div>
 <% end %>
-<center><h3>Create Account</h3><center>
+<center><h3>Create Account</h3></center>
 <%= render :partial => 'form' %><br />
 <hr class="soften"></hr>
 <center><h2>Choose between the following 3 account types</h2></center><br />
