--- a/app/views/accounts/_pricing.html.erb
+++ b/app/views/accounts/_pricing.html.erb
@@ -3,7 +3,12 @@
 	<p>With the platinum package you can invite other people to join Black Pride Beauty and get a percentage of their earnings... </p>
 	<p>Please click the following button to upgrade to Platinum Account</p>
 	<br />
-	<p><%= link_to 'Upgrade to Platinum', upgrade_to_premium_users_path, {:class => "center green_button"} %></p>
+	<p>
+		<%= link_to 'Upgrade to Platinum', upgrade_to_platinum_users_path, {:class => "plain_button label_package_1"} %>
+		<% if account.has_free_package %>
+			<%= link_to 'Upgrade to Gold', upgrade_to_gold_users_path, {:class => "plain_button label_package_2"} %>
+		<% end %>
+	</p>
 </div>
 	<div class="row-fluid">
 		<div class="span4">
