--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -50,7 +50,7 @@
 				<% if @account.has_platinum_package %>
 					<%= render :partial => 'network' %>
 				<% else %>
-					<%= render :partial => 'pricing' %>				
+					<%= render :partial => 'pricing', :locals => {:account => @account} %>
 				<% end -%>
 			</div>
 			<div id="commission" class="tab-pane fade">
