--- a/app/views/identities/_form.html.erb
+++ b/app/views/identities/_form.html.erb
@@ -16,10 +16,10 @@
  <%= text_field_tag :email, @identity.try(:email), placeholder: "Email *" %>
 </div>
 <div class="field">
- <%= password_field_tag :password, placeholder: "Password *" %>
+ <%= password_field_tag :password, "", placeholder: "Password *" %>
 </div>
 <div class="field">
- <%= password_field_tag :password_confirmation, placeholder: "Confirm Password *" %>
+ <%= password_field_tag :password_confirmation, "", placeholder: "Confirm Password *" %>
 </div>
 <div class="field">
  <%= text_field_tag :company, @user.try(:company), placeholder: "Company" %>
@@ -52,8 +52,7 @@
 	<%= select_tag :package, options_for_select(User::PACKAGE_IDS.inject({}){|memo,(k,v)| memo[k.to_s] = v; memo},@identity.try(:package)) %>
 </div>
 <div class="field">
-	<%= text_field_tag :referer_id, @identity.try(:referer_id), placeholder: "Referer ID *" %>
-	<span id="no_referer_id" class="label label-important" style="display:none">Sorry, the Referer ID does not exist</span>
+	<%= text_field_tag :referer_id, "", placeholder: "Referer ID *" %>
 </div>
 <div class="field">
 	<%= text_field_tag :referred_by, @identity.try(:referred_by), :disabled => true, placeholder: "Referer Name" %>
