--- a/app/views/payment_notifications/index.html.erb
+++ b/app/views/payment_notifications/index.html.erb
@@ -1,4 +1,15 @@
 <% content_for :nav_links do %>
+<ul class="nav">
+	<li class="divider-vertical"></li>
+	<li><%= link_to 'Your Account', my_account_path %></li>
+	<li class="divider-vertical"></li>
+	<li><%= link_to 'Your Payments', payment_notifications_path %></li>
+	<li class="divider-vertical"></li>
+	<li><a href="#about">About</a></li>
+	<li class="divider-vertical"></li>
+	<li><a href="#help">Help</a></li>
+	<li class="divider-vertical"></li>
+</ul>
 <div class="btn-group pull-right">
 	<a class="btn dropdown-toggle" href="#" data-toggle="dropdown">
 		<i class="icon-user"></i>
@@ -9,16 +20,12 @@
 		<li>
 			<%= link_to "Sign Out", logout_path %>
 		</li>
+		<li>
+			<%= link_to "Edit Account", "#" %>
+		</li>
 	</ul>
 </div>
-<div class="nav-collapse">
-  <ul class="nav pull-right">
-		<li><%= link_to 'My Account', my_account_path %></li>
-		<li><%= link_to 'My Payments', payment_notifications_path %></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#help">Help</a></li>
-  </ul>
-</div>
+
 <% end %>
 
 
