update user detail

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -16,3 +16,6 @@
 .pagination .first a{
   border-width: 1px 1px 1px 1px !important;
 }
+
+.edit_user label{display: inline; float: left; text-align: right; width: 35% !important;}
+.edit_user input{display: inline}
