--- a/app/views/payment_notifications/index.html.erb
+++ b/app/views/payment_notifications/index.html.erb
@@ -21,7 +21,7 @@
 			<%= link_to "Sign Out", logout_path %>
 		</li>
 		<li>
-			<%= link_to "Edit Account", "#" %>
+			<%= link_to "Edit Account", edit_user_path(current_user) %>
 		</li>
 	</ul>
 </div>
