--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,34 @@
+<% content_for :nav_links do %>
+<ul class="nav">
+	<li class="divider-vertical"></li>
+	<li><%= link_to 'Your Account', my_account_path %></li>
+	<li class="divider-vertical"></li>
+	<li><%= link_to 'Your Payments', payment_notifications_path %></li>
+	<li class="divider-vertical"></li>
+	<li><a href="#about">About</a></li>
+	<li class="divider-vertical"></li>
+	<li><a href="#help">Help</a></li>
+	<li class="divider-vertical"></li>
+</ul>
+<div class="btn-group pull-right">
+	<a class="btn dropdown-toggle" href="#" data-toggle="dropdown">
+		<i class="icon-user"></i>
+		<%= current_user.name %>
+		<span class="caret"></span>
+	</a>
+	<ul class="dropdown-menu">
+		<li>
+			<%= link_to "Sign Out", logout_path %>
+		</li>
+		<li>
+			<%= link_to "Edit Account", edit_user_path(current_user) %>
+		</li>
+	</ul>
+</div>
+<% end %>
+
+
 <h1>Editing user</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
