--- a/app/views/layouts/_header_links.html.erb
+++ b/app/views/layouts/_header_links.html.erb
@@ -1,17 +1,17 @@
-<% content_for :nav_links do %>
-<ul class="nav">
+<% if current_user %>
+      <ul class="nav">
 	<li class="divider-vertical"></li>
 	<li><%= link_to 'Account Home', my_account_path %></li>
 	<li class="divider-vertical"></li>
-	  <li><%= link_to 'About', static_about_path %></li>
-        <li class="divider-vertical"></li>
-        <li><%= link_to 'Help', static_help_path %></li>
+	<li><a href="#about">About</a></li>
+	<li class="divider-vertical"></li>
+	<li><a href="#help">Help</a></li>
 	<li class="divider-vertical"></li>
 </ul>
 <div class="btn-group pull-right">
 	<a class="btn dropdown-toggle" href="#" data-toggle="dropdown">
 		<i class="icon-user"></i>
-		<%= @current_user.name %>
+		<%= @account.name %>
 		<span class="caret"></span>
 	</a>
 	<ul class="dropdown-menu">
@@ -20,11 +20,9 @@
 		<li><%= link_to 'Your Payments', payment_notifications_path %></li>
 	</ul>
 </div>
+<% else %>
 
 <% end %>
 
 
-<h1>Editing user</h1>
-
-<%= render 'form' %>
 
